fix form width on mobile screens

--- a/public/styles/contact.scss
+++ b/public/styles/contact.scss
@@ -171,6 +171,8 @@
 
 .section.bottom {
     padding-top: 0;
+    width: 100%;
+
 
     .col-lg-4 {
         position: relative;
